<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="@dimen/itemCardRadius"
    app:cardElevation="@dimen/itemCardElevation"
    app:strokeColor="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="330dp">

        <ImageView
            android:id="@+id/iv_book_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pic_starter"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/title"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_book_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/author"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_book_image"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/publisher"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_book_image"
            app:layout_constraintTop_toBottomOf="@id/tv_author" />

        <TextView
            android:id="@+id/tv_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/rank"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintEnd_toStartOf="@id/tv_rank_digit"
            app:layout_constraintStart_toEndOf="@id/iv_book_image"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher" />

        <TextView
            android:id="@+id/tv_rank_digit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/digit"
            android:textSize="@dimen/text_size_in_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rank"
            app:layout_constraintTop_toBottomOf="@id/tv_publisher" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/itemMargin"
            android:text="@string/test_desc"
            app:layout_constraintBottom_toTopOf="@id/fb_buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_book_image" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_schopping_cart_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
